# notify-service

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  run
src/: main.rs
src/adapters/kafka_inbound/: kafka_inbound.rs  mod.rs
src/core/: domain.rs  mod.rs
src/core/util/: mod.rs
